# xts_acts

./: .gitattributes  .gitlab-ci.yml  1.yara  7445.patch  ActsScreenCaptureNdkTest.hap  ActsScreenCaptureNdkTest.hap.md5.stamp  BUILD.gn  MobaXterm.ini  OAT.xml  OpenHarmony_SA_2022_0806.yara  OpenHarmony_SA_2022_1103.yara  README-EN.md  README.en.md  README.md  README_zh.md  account.rar  account_xts.patch  animate.js  build.sh  bundle.json  check_hvigor.py  ci_build.sh  communication.diff  get_dependency.py  iii  local.properties  patch  patch2  patch3  pr0609.h  runtest.sh  test0524.c  test_packages.gni  toolchain.7z  xts_acts_config.gni
applications/kitframework/:  README.md   README_zh.md  BUILD.gn  Readme.md  kitfwk_oem_api_test.c  readme.md
arkui/ace_c_arkui_test/: BUILD.gn  Test.json
arkui/ace_ets_component_common_attrss/: BUILD.gn
arkui/ace_ets_web_dev_four/: BUILD.gn  Test.json
barrierfree/accessibletest/: BUILD.gn
distributeddatamgr/lite_distributeddb/: BUILD.gn
distributeddatamgr_lite/lite_distributeddb/: BUILD.gn  Test.json
graphic/: BUILD.gn
graphic/acts_drawing_native/: BUILD.gn
graphic/acts_graphicXTSDrawingNapi/: BUILD.gn  NativeDrawingBitmapTest.cpp  NativeDrawingBrushTest.cpp  NativeDrawingCanvasTest.cpp  NativeXTSDrawingBitmapTest.cpp  NativeXTSDrawingBrushTest.cpp  NativeXTSDrawingCanvasTest.cpp  NativeXTSDrawingColorFilterTest.cpp  NativeXTSDrawingColorSpaceTest.cpp  NativeXTSDrawingColorTest.cpp  NativeXTSDrawingFilterTest.cpp  NativeXTSDrawingFontMgrTest.cpp  NativeXTSDrawingFontTest.cpp  NativeXTSDrawingGpuContextTest.cpp  NativeXTSDrawingImageFilterTest.cpp  NativeXTSDrawingImageTest.cpp  NativeXTSDrawingMaskFilterTest.cpp  NativeXTSDrawingMatrixTest.cpp  NativeXTSDrawingMemoryStreamTest.cpp  NativeXTSDrawingPathTest.cpp  NativeXTSDrawingPenTest.cpp  NativeXTSDrawingPixelMapTest.cpp  NativeXTSDrawingPointTest.cpp  NativeXTSDrawingRectTest.cpp  NativeXTSDrawingRegionTest.cpp  NativeXTSDrawingRoundRectTest.cpp  NativeXTSDrawingShaderEffectTest.cpp  NativeXTSDrawingShadowLayerTest.cpp  NativeXTSDrawingTextBlobTest.cpp  Test.json
graphic/acts_windowCompatibilityTest/: Test.json
graphic/actssystemapitest/: Test.json
graphic/effectKit/: BUILD.gn  Test.json
graphic/graphicColorSpace/: BUILD.gn  Test.json
graphic/graphicEffectFliterTest/: BUILD.gn
graphic/graphicGLES3/: BUILD.gn  Test.json
graphic/graphicGlesExtension/: BUILD.gn  graphicGlesExtension.cpp
graphic/graphicnapidrawingtest/: BUILD.gn  NativeDrawingBitmapTest.cpp  NativeDrawingBrushTest.cpp  NativeDrawingCanvasTest.cpp  NativeDrawingColorTest.cpp  NativeDrawingPathTest.cpp  NativeDrawingPenTest.cpp  NativeFontTest.cpp  OH_Drawing_FontCollectionTest.cpp  OH_Drawing_TypographyTest.cpp  Test.json
graphic/graphicnapitest/: BUILD.gn  NativeBufferTest.cpp  NativeImageTest.cpp  NativeVsyncTest.cpp  NativeWindowTest.cpp  Test.json
graphic/graphicvulkannapitest/: VulkanTest.cpp
graphic/imagePixelMapFramework/: BUILD.gn  Test.json
graphic/nativebuffer/: BUILD.gn  Test.json  oh-package-lock.json5  oh-package.json5
graphic/nativedrawing/: BUILD.gn  Test.json  local.properties
graphic/nativeimage/: BUILD.gn  Test.json  build-profile.json5
graphic/nativewindow/: BUILD.gn  Test.json  build-profile.json5
graphic/vkgl/: BUILD.gn  README_zh.md  comm.gni  cpvkgl.sh
graphic/vktest/: BUILD.gn  README_zh.md  Test.json  comm.gni  cpVulkan.sh  genlocal.py
graphic/vkwithstar/: BUILD.gn  comm.gni  cpVulkan.sh  cpvkTest.sh
graphic/vulkan/: BUILD.gn  Test.json  comm.gni  cpVulkan.sh  cpvkTest.sh  genlocal.py
graphic/webGL/: BUILD.gn  Test.json
graphic/windowPermission/: Test.json
graphic/windowStage/: BUILD.gn  Test.json
graphic/windowstandard/: BUILD.gn  Test.json
hdf/display/: BUILD.gn  Test.json
image/: BUILD.gn
image/image/: BUILD.gn
image/imageColorspace/: BUILD.gn  Test.json
image/imageDecodeOptions/: BUILD.gn  Test.json
image/imageExif/: BUILD.gn
image/imageGetImageProperty/: BUILD.gn
image/imageModifyProperty/: BUILD.gn  Test.json
image/imagePacking/: BUILD.gn  Test.json
image/imagePixelMapFramework/: BUILD.gn
image/imageRGBA/: Test.json
image/imageRaw/: BUILD.gn
image/imageReceiver/: BUILD.gn
image/imageWebp/: BUILD.gn
image/imageYUV/: BUILD.gn  Test.json
kernel_lite/uniproton_benchmark/: BUILD.gn  Test.json
kernel_lite/uniproton_perf_testing/: BUILD.gn  Test.json  readme.md
multimedia/: .gitattributes  BUILD.gn
multimedia/avsource/: Test.json  build-profile.json5  oh-package.json5
multimedia/fixavsource/: BUILD.gn  Test.json  oh-package.json5
multimedia/media/: temp.json
multimedia/media_cpp_standard/: BUILD.gn
multimedia/media_cpp_test_standard/: BUILD.gn  Test.json
multimedia/medialibrary/: common.js
multimedia/photoAccess/: common.ts
multimedia/userfilemgr/: common.js  common.ts
multimodalinput/: BUILD.gn
multimodalinput/api_test/: BUILD.gn  common_event_handler_api_test.cpp  key_event_api_test.cpp  keyboard_event_api_test.cpp  manipulation_event_api_test.cpp  media_event_handler_api_test.cpp  mmipoint_api_test.cpp  mouse_event_api_test.cpp  multimodal_event_api_test.cpp  rotation_event_api_test.cpp  stylus_event_api_test.cpp  system_event_handler_api_test.cpp  telephone_event_handler_api_test.cpp  touch_event_api_test.cpp
multimodalinput/functional_test/: BUILD.gn
multimodalinput/fuzztest/: BUILD.gn
multimodalinput/hdf/: BUILD.gn
multimodalinput/input_cpp_standard/: BUILD.gn  input_native_test.cpp
multimodalinput/input_js_standard/: BUILD.gn  Test.json
multimodalinput/input_native_standard/: BUILD.gn
multimodalinput/input_standard/: BUILD.gn
multimodalinput/libinput/: BUILD.gn  hosmmi-auto-test.sh
multimodalinput/multimodalinput_ets_standard/: BUILD.gn  Test.json
multimodalinput/performance_test/: BUILD.gn
multimodalinput/sys_check_js_standard/: BUILD.gn  Test.json
multimodalinput/tsapi_test/: BUILD.gn  Test.json
tee/tee_test_arithmetic_api/: BUILD.gn  Test.json
useriam/: BUILD.gn
useriam/face_auth/: .clang-format  BUILD.gn
useriam/faceauth/: BUILD.gn
(+48170 files in other folders)
