# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
group("graphic") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "effectKit:EffectKitTest",
      "graphicColorSpace:ActsColorSpaceManagerTest",
      "graphicnapidrawingtest:ActsGraphicNapiDrawingTest",
      "graphicnapitest:ActsGraphicNapiTest",
      "image/image_js_standard/image:image_js_hap",
      "image/image_js_standard/imageColorspace:image_colorspace_js_hap",
      "image/image_js_standard/imageCreator:image_creator_js_hap",
      "image/image_js_standard/imageDecodeOptions:image_DecodeOptions_js_hap",
      "image/image_js_standard/imageExif:image_exif_js_hap",
      "image/image_js_standard/imageGetImageProperty:image_getProperty_js_hap",
      "image/image_js_standard/imageGif:image_gif_js_hap",
      "image/image_js_standard/imageModifyProperty:image_modifyProperty_js_hap",
      "image/image_js_standard/imagePacking:image_packing_js_hap",
      "image/image_js_standard/imagePixelMapFramework:image_pixelmapframework_js_hap",
      "image/image_js_standard/imagePixelMapNDK:image_pixel_map_ndk_js_hap",
      "image/image_js_standard/imageRGBA:image_rgba_js_hap",
      "image/image_js_standard/imageRaw:image_raw_js_hap",
      "image/image_js_standard/imageReceiver:image_receiver_js_hap",
      "image/image_js_standard/imageReceiverMultiThread:image_receiver_multi_thread_hap",
      "image/image_js_standard/imageReceiverNDK:image_receiver_ndk_js_hap",
      "image/image_js_standard/imageSvg:image_svg_js_hap",
      "image/image_js_standard/imageWebp:image_webp_js_hap",
      "image/image_js_standard/imageYUV:image_yuv_js_hap",
      "image/image_js_standard/image_ndk_test:image_pixelmap_ndk_hap",
      "webGL:webGL_hap_test",
      "windowStage:ActsWindowStageTest",
      "windowstandard:window_hap_test",
    ]
    if (!(product_name == "ohcore")) {
      deps += [ "vkgl:cpvkgl" ]
    }
  } else {
    deps = [
      "appaccount:appaccount_hap",
      "osaccount:osaccount_hap",
    ]
  }
}
