# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//test/xts/tools/build/suite.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")
group("graphic") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "effectKit:EffectKitTest",
      "graphicColorSpace:ActsColorSpaceManagerTest",
      "graphicnapidrawingtest:ActsGraphicNapiDrawingTest",
      "graphicnapitest:ActsGraphicNapiTest",
      "webGL:webGL_hap_test",
      "windowStage:ActsWindowStageTest",
      "windowstandard:window_hap_test",
    ]
    if (!(product_name == "ohcore")) {
      if(graphic_standard_feature_enable_vulkan){
        deps += [ 
          "vkgl:cpvkgl",
          "vkwithstar:cpvktest",
          "vulkan:vulkanTest", 
        ]
      }
    }
  } else {
    deps = [
      "appaccount:appaccount_hap",
      "osaccount:osaccount_hap",
    ]
  }
}
