# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
group("image") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "image:image_js_hap",
      "imageColorspace:image_colorspace_js_hap",
      "imageCreator:image_creator_js_hap",
      "imageDecodeOptions:image_DecodeOptions_js_hap",
      "imageExif:image_exif_js_hap",
      "imageGetImageProperty:image_getProperty_js_hap",
      "imageModifyProperty:image_modifyProperty_js_hap",
      "imagePacking:image_packing_js_hap",
      "imagePixelMapFramework:image_pixelmapframework_js_hap",
      "imageRGBA:image_rgba_js_hap",
      "imageRaw:image_raw_js_hap",
      "imageReceiver:image_receiver_js_hap",
      "imageWebp:image_webp_js_hap",
      "imageYUV:image_yuv_js_hap",
      "image_ndk_test:image_pixelmap_ndk_hap",
    ]
  } else {
    deps = [
      "appaccount:appaccount_hap",
      "osaccount:osaccount_hap",
    ]
  }
}
