import("//test/xts/tools/lite/build/suite_lite.gni")

hctest_suite("ActsKitFwkApiTest") {
  suite_name = "acts"

  sources = [
    "kitfwk_oem_api_test.c"
  ]

  include_dirs = [
    "//test/xts/tools/lite/hctest/include",
    "//third_party/unity/src",
    "//utils/native/lite/include",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//third_party/bounds_checking_function/include/",
    "//third_party/mbedtls/include/",
    "//third_party/cJSON/",
    # dir for token.h
    "//base/startup/syspara_lite/interfaces/kits/",
    # dir for oem_auth_config.h and oem_auth_result_storage.h
    "//vendor/kitframework/include/",
  ]

  # un-comment this Macro for token-persist-test
  # defines = [ "TOKEN_PERSIST_TEST" ]
}
