# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

module_output_path = "Acts/ActsAceCArkUITest"

###############################################################################

ohos_moduletest_suite("ActsAceCArkUITest") {
  module_out_path = module_output_path
  subsystem_name = "arkui"
  part_name = "ace_engine"
  comPath = "../../../../../foundation/arkui"

  sources = [
    "./src/scroll/scroll_height_test.cpp",
    "./src/scroll/scroll_width_test.cpp",
    "./src/stack/stack_height_test.cpp",
    "./src/stack/stack_width_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  include_dirs = [ "$comPath/ace_engine/interfaces/native" ]

  external_deps = [ "hilog:libhilog" ]

  deps = [
    "$comPath/ace_engine/interfaces/native:ace_ndk",
    "$comPath/ace_engine/interfaces/native:libace_ndk",
  ]
}
