# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

module_output_path = "Acts/ActsAceCArkUITest"

###############################################################################

ohos_moduletest_suite("ActsAceCArkUITest") {
  module_out_path = module_output_path
  subsystem_name = "arkui"
  part_name = "ace_engine"
  comPath = "../../../../../foundation/arkui"

  sources = [
    "./src/scroll/scroll_backgroundcolor_test.cpp",
    "./src/scroll/scroll_blur_test.cpp",
    "./src/scroll/scroll_bordercolor_test.cpp",
    "./src/scroll/scroll_borderradius_test.cpp",
    "./src/scroll/scroll_borderwidth_test.cpp",
    "./src/scroll/scroll_brightness_test.cpp",
    "./src/scroll/scroll_clip_test.cpp",
    "./src/scroll/scroll_currentoffset_test.cpp",
    "./src/scroll/scroll_edgeeffect_test.cpp",
    "./src/scroll/scroll_enablescrollinteraction_test.cpp",
    "./src/scroll/scroll_friction_test.cpp",
    "./src/scroll/scroll_height_test.cpp",
    "./src/scroll/scroll_lineargradient_test.cpp",
    "./src/scroll/scroll_opacity_test.cpp",
    "./src/scroll/scroll_overlay_test.cpp",
    "./src/scroll/scroll_position_test.cpp",
    "./src/scroll/scroll_rotate_test.cpp",
    "./src/scroll/scroll_scale_test.cpp",
    "./src/scroll/scroll_scrollable_test.cpp",
    "./src/scroll/scroll_scrollbar_test.cpp",
    "./src/scroll/scroll_scrollbarcolor_test.cpp",
    "./src/scroll/scroll_scrollsnap_test.cpp",
    "./src/scroll/scroll_scrollto_test.cpp",
    "./src/scroll/scroll_shadow_test.cpp",
    "./src/scroll/scroll_translate_test.cpp",
    "./src/scroll/scroll_width_test.cpp",
    "./src/swiper/swiper_autoplay_test.cpp",
    "./src/swiper/swiper_backgroundcolor_test.cpp",
    "./src/swiper/swiper_backgroundimage_test.cpp",
    "./src/swiper/swiper_clip_test.cpp",
    "./src/swiper/swiper_curve_test.cpp",
    "./src/swiper/swiper_disableswipe_test.cpp",
    "./src/swiper/swiper_displayarrow_test.cpp",
    "./src/swiper/swiper_displaycount_test.cpp",
    "./src/swiper/swiper_duration_test.cpp",
    "./src/swiper/swiper_height_test.cpp",
    "./src/swiper/swiper_index_test.cpp",
    "./src/swiper/swiper_indicator_test.cpp",
    "./src/swiper/swiper_interval_test.cpp",
    "./src/swiper/swiper_itemspace_test.cpp",
    "./src/swiper/swiper_loop_test.cpp",
    "./src/swiper/swiper_position_test.cpp",
    "./src/swiper/swiper_vertical_test.cpp",
    "./src/swiper/swiper_width_test.cpp",
    "./src/toggle/toggle_backgroundcolor_test.cpp",
    "./src/toggle/toggle_clip_test.cpp",
    "./src/toggle/toggle_focusable_test.cpp",
    "./src/toggle/toggle_height_test.cpp",
    "./src/toggle/toggle_margin_test.cpp",
    "./src/toggle/toggle_position_test.cpp",
    "./src/toggle/toggle_selectedcolor_test.cpp",
    "./src/toggle/toggle_switchpointcolor_test.cpp",
    "./src/toggle/toggle_width_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  include_dirs = [ "$comPath/ace_engine/interfaces/native" ]

  external_deps = [ "hilog:libhilog" ]

  deps = [
    "$comPath/ace_engine/interfaces/native:ace_ndk",
    "$comPath/ace_engine/interfaces/native:libace_ndk",
  ]
}
