# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("componentAttrssTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "ace_ets_component_common_attrss_alignRules:ActsAceEtsComponentCommonAttrsAlignRulesTest",
      "ace_ets_component_common_attrss_aspectRatio:ActsAceEtsComponentCommonAttrsAspectRadioTest",
      "ace_ets_component_common_attrss_constraintSize:ActsAceEtsComponentCommonAttrsConstraintSizeTest",
      "ace_ets_component_common_attrss_default:ActsAceEtsComponentCommonAttrsDefaultTest",
      "ace_ets_component_common_attrss_defaultFocus:ActsAceEtsComponentCommonAttrsdefaultFocusTest",
      "ace_ets_component_common_attrss_displayPriority:ActsAceEtsComponentCommondisplayPriorityTest",
      "ace_ets_component_common_attrss_enabled:ActsAceEtsComponentCommonenabledTest",
      "ace_ets_component_common_attrss_flex:ActsAceEtsComponentCommonflexTest",
      "ace_ets_component_common_attrss_focusable:ActsAceEtsComponentCommonfocusableTest",
      "ace_ets_component_common_attrss_focusableDefault:ActsAceEtsComponentCommonfocusableDefaultTest",

    ]
  }
}
