# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

group("ActsAceWebDevFourTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "webDefaultFixedFontSize:ActswebDefaultFixedFontSizeTest",
      "webDefaultFixedFontSizeFif:ActswebDefaultFixedFontSizeFifTest",
      "webDefaultFixedFontSizeFour:ActsWebDefaultFixedFontSizeFourTest",
      "webDefaultFixedFontSizeSec:ActsWebDefaultFixedFontSizeSecTest",
      "webDefaultFixedFontSizeThir:ActsWebDefaultFixedFontSizeThirTest",
      "webGetMinimumLogicalFontSize:ActsWebGetMinimumLogicalFontSizeTest",
      "webGetMinimumLogicalFontSizeFif:ActsWebGetMinimumLogicalFontSizeFifTest",
      "webGetMinimumLogicalFontSizeFour:ActsWebGetMinimumLogicalFontSizeFourTest",
      "webGetMinimumLogicalFontSizeSec:ActsWebGetMinimumLogicalFontSizeSecTest",
      "webGetMinimumLogicalFontSizeThir:ActsWebGetMinimumLogicalFontSizeThirTest",
      "webMinFontSize:ActsWebMinFontSizeTest",
      "webMinFontSizeFif:ActsWebMinFontSizeFifTest",
      "webMinFontSizeFour:ActsWebMinFontSizeFourTest",
      "webMinFontSizeSec:ActsWebMinFontSizeSecTest",
      "webMinFontSizeThir:ActsWebMinFontSizeThirTest",
      "webOnFaviconReceived:ActsWebviewOnFaviconTest",
      "webfamily:ActsWebFamilyTest",
      "webfamilySec:ActsWebFamilySecTest",
      "webfamilyfif:ActsWebFamilyFifTest",
      "webfamilyfour:ActsWebFamilyFourTest",
      "webfamilyseven:ActsWebFamilySevenTest",
      "webfamilysix:ActsWebFamilySixTest",
      "webfamilythir:ActsWebFamilyThirTest",
      "webview:ActsWebviewTest",
      "webviewFif:ActsWebviewFifTest",
      "webviewFour:ActsWebviewFourTest",
      "webviewSec:ActsWebviewSecTest",
      "webviewThir:ActsWebviewThirTest",
      "webview_nweb:ActsWebviewNwebTest",
    ]
  }
}
