# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")

group("actsaccessibletest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "actsabilitylisttest:ActsAbilityListTest",
      "actsaccesscontroltest:ActsAccessControlTest",
      "actsaccessibleeventtest:ActsAccessibleEventTest",
      "actsactioninitiationtest:ActsActionInitiationTest",
      "actsanimationofftest:ActsAnimationOffTest",
      "actsassistapptest:ActsAssistAppTest",
      "actsbrightnessdiscounttest:ActsBrightnessDiscountTest",
      "actscaptionconfigurationtest:ActsCaptionConfigurationTest",
      "actscheckabilitytest:ActsCheckAbilityTest",
      "actscontenttimeouttest:ActsContentTimeoutTest",
      "actsdaltonizationcolorfilterfest:ActsDaltonizationColorFilterTest",
      "actsdfxtest:ActsDfxTest",
      "actsfocusquerytest:ActsAccessibleFocusQueryTest",
      "actsgesturesimulationtest:ActsGestureSimulationTest",
      "actshighcontrasttexttest:ActsHighContrastTextTest",
      "actsinvertcolortest:ActsInvertColorTest",
      "actsmouseautoclicktest:ActsMouseAutoClickTest",
      "actsmousekeytest:ActsMouseKeyTest",
      "actsreceiveeventstest:ActsAccessibleReceiveEventsClockTest",
      "actsregistertest:ActsAccessibleRegisterTest",
      "actsreportnodeinfotest:ActsReportNodeInfoTest",
      "actsrootelementtest:ActsAccessibleRootElementTest",
      "actsshortkeytargettest:ActsShortkeyTargetTest",
      "actsshortkeytest:ActsShortkeyTest",
      "actstouchintercepttest:ActsTouchInterceptTest",
      "actswindowinfotest:ActsWindowinfoTest",
      "sceneProject/accessibilityReceiveEventOther:accessibilityReceiveEventOther",
    ]
  }
}
