# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/lite/build/suite_lite.gni")

PROJ_PATH = "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb"

hcpptest_suite("DistributedDBLiteTest") {
  suite_name = "acts"
  sources = [ "src/distributeddb_interfaces_nb_transaction_test.cpp" ]

  include_dirs = [
    "src",
    # "$PROJ_PATH/commont/include",
    # "$PROJ_PATH/common/src",
    # "$PROJ_PATH/communicator/src",
    # "$PROJ_PATH/interfaces/src",
    # "$PROJ_PATH/storage/src",
    # "$PROJ_PATH/storage/src/operation",
    # "$PROJ_PATH/storage/src/sqlite",
    # "$PROJ_PATH/storage/src/upgrader",
    # "$PROJ_PATH/storage/src/multiver",
    # "$PROJ_PATH/sync/src",
    # "$PROJ_PATH/test/unittest/common/common",
    # "$PROJ_PATH/test/unittest/common/syncer",
    "$PROJ_PATH/test/unittest/common/interfaces",

  ]

  deps = []

  cflags = [ "-Wno-error" ]
}