# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/lite/build/suite_lite.gni")

PROJ_PATH = "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb"

hcpptest_suite("DistributedDBLiteTest") {
  suite_name = "acts"
  sources = [
    "src/distributeddb_interfaces_nb_transaction_test.cpp",
  ]

  include_dirs = [
    "src",
    "$PROJ_PATH/include",
    "$PROJ_PATH/interfaces/include",
  ]

  deps = [
    "$PROJ_PATH/lite:foundation_lite_distributeddb",
  ]

  cflags = [ "-Wno-error" ]

  ldflags = [
    "-lstdc++",
    "-lm",
    "-lpthread",
  ]
}