# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

module_output_path = "hit/GraphicNapiDrawingTest"

###############################################################################

ohos_moduletest_suite("GraphicNapiDrawingTest") {
  module_out_path = module_output_path
  
  sources = [
    "drawing_bitmap_test.cpp",
    "drawing_brush_test.cpp",
    "drawing_canvas_test.cpp",
    "drawing_color_test.cpp",
    "drawing_font_collection_test.cpp",
    "drawing_path_test.cpp",
    "drawing_pen_test.cpp",
    "drawing_text_typography_test.cpp",
  ]

  cflags= [
     "-Wall",
     "-Werror",
  ]
  
  include_dirs = [
    "//foundation/graphic/graphic_2d/rosen/modules/2d_engine",
    "//foundation/graphic/graphic_2d/rosen/modules/2d_graphics/include",
    "//foundation/graphic/graphic_2d/rosen/modules/2d_graphics/src",
    "//third_party/googletest/googletest/include",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/graphic_2d/rosen/modules/2d_graphics:2d_graphics",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]
}
