# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

import("//test/xts/acts/graphic/vulkan/comm.gni")


ohos_moduletest_suite("ActsVulkanTests") {
  sources = [ 
    "src/ActsVulkanApiTest.cpp", 
    "src/ActsVulkanBinding_modelTest.cpp", 
    "src/ActsVulkanClippingTest.cpp", 
    "src/ActsVulkanComputeTest.cpp", 
    "src/ActsVulkanConditional_renderingTest.cpp", 
    "src/ActsVulkanDescriptor_indexingTest.cpp", 
    "src/ActsVulkanDevice_groupTest.cpp", 
    "src/ActsVulkanDrawTest.cpp", 
    "src/ActsVulkanDrm_format_modifiersTest.cpp", 
    "src/ActsVulkanDynamic_renderingTest.cpp", 
    "src/ActsVulkanDynamic_stateTest.cpp", 
    "src/ActsVulkanFragment_operationsTest.cpp", 
    "src/ActsVulkanFragment_shader_interlockTest.cpp", 
    "src/ActsVulkanFragment_shading_rateTest.cpp", 
    "src/ActsVulkanGeometryTest.cpp", 
    "src/ActsVulkanGlslTest.cpp", 
    "src/ActsVulkanGraphicsfuzzTest.cpp", 
    "src/ActsVulkanImageTest.cpp", 
    "src/ActsVulkanImageless_framebufferTest.cpp", 
    "src/ActsVulkanInfoTest.cpp", 
    "src/ActsVulkanMemory_modelTest.cpp", 
    "src/ActsVulkanMemoryTest.cpp", 
    "src/ActsVulkanMesh_shaderTest.cpp", 
    "src/ActsVulkanMultiviewTest.cpp", 
    "src/ActsVulkanPipelineTest.cpp", 
    "src/ActsVulkanProtected_memoryTest.cpp", 
    "src/ActsVulkanQuery_poolTest.cpp", 
    "src/ActsVulkanRasterizationTest.cpp", 
    "src/ActsVulkanRay_queryTest.cpp", 
    "src/ActsVulkanRay_tracing_pipelineTest.cpp", 
    "src/ActsVulkanReconvergenceTest.cpp", 
    "src/ActsVulkanRenderpassTest.cpp", 
    "src/ActsVulkanRenderpass2Test.cpp", 
    "src/ActsVulkanRobustnessTest.cpp", 
    "src/ActsVulkanSparse_resourcesTest.cpp", 
    "src/ActsVulkanSpirv_assemblyTest.cpp", 
    "src/ActsVulkanSsboTest.cpp", 
    "src/ActsVulkanSubgroupsTest.cpp", 
    "src/ActsVulkanSynchronizationTest.cpp", 
    "src/ActsVulkanSynchronization2Test.cpp", 
    "src/ActsVulkanTessellationTest.cpp", 
    "src/ActsVulkanTextureTest.cpp", 
    "src/ActsVulkanTransform_feedbackTest.cpp", 
    "src/ActsVulkanUboTest.cpp", 
    "src/ActsVulkanWsiTest.cpp", 
    "src/ActsVulkanYcbcrTest.cpp", 
    "src/ActsVulkanTest_issuesTest.cpp", 
    "src/ActsVulkanMasterTest.cpp", 
    "src/ActsVulkanFraction_mandatory_testsTest.cpp", 
  ]

  include_dirs = [
    "//test/xts/acts/graphic/vulkan/src",
    
  ]
  deps = []
  cflags = [ "-Wno-error" ]
}

action("cpVulkan") {
  testonly = true
  script = "cpVulkan.sh"
  outputs = [ "${target_out_dir}/cpVulkan.log" ]
  deps = [
    ":ActsVulkanTests",
  ]
}

group("vulkanTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      ":ActsVulkanTests",
      ":cpVulkan",
    ]
  }
}
