# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//test/xts/tools/build/suite.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

module_output_path = "hdf/display"
ohos_moduletest_suite("hdf_xtstest_display") {
  module_out_path = module_output_path
  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/framework/ability/sbuf/include",
    "//drivers/framework/include/platform",
    "//drivers/framework/include/core",
    "//drivers/framework/include/osal",
    "//drivers/adapter/uhdf/posix/include",
    "//drivers/framework/include/utils",
    "//drivers/framework/include/config",
    "//drivers/framework/include",
    "//drivers/framework/test/unittest/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/interfaces/include",
  ]

  sources = [
    "./common/display_test.c",
    "./common/hdi_display_test.cpp",
    "./common/loadbmp_test.c",
  ]

  deps = [
#    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
#    "//drivers/adapter/uhdf/manager:hdf_core",
#    "//drivers/adapter/uhdf/posix:hdf_posix_osal",
    "//drivers/peripheral/display/hal:hdi_display",
#    "//third_party/bounds_checking_function:libsec_shared",
    "$hdf_uhdf_path/osal:libhdf_utils",
    "//utils/native/base:utils",
  ]

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}
